分析模板/2026.04.27/周二004_巴黎圣曼vs拜仁_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周二004 | 采集日期：2026-04-29

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 巴黎圣曼 |
| 客队 | 拜仁 |
| 比赛时间 | 2026-04-29 03:00 |
| 赛事 | 欧冠 |
| 让球 | -1 |
| 主队近况 | 近10场，8胜0平2负 进27球 失8球 胜率80% 赢盘率80% 大球率80% |
| 客队近况 | 近10场，9胜1平0负 进33球 失13球 胜率90% 赢盘率70% 大球率80% |
| 主队近况走势 | - |
| 主队盘路走势 | - |
| 客队近况走势 | - |
| 客队盘路走势 | - |
| 历史交锋 | 巴黎圣日耳曼 1胜0和5负 |
| 澳门推荐 |  |
| 澳门分析 |  |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.08, 3.70, 2.65),  # 竞*官*
    (2.25, 3.80, 2.75),  # 威**尔
    (2.24, 3.80, 2.48),  # *门
    (2.30, 3.90, 2.70),  # 立*
    (2.20, 3.75, 3.00),  # **t3*5
    (2.35, 3.85, 2.75),  # I***rw**t*n
    (2.25, 3.90, 2.80),  # S**I
    (2.30, 4.05, 2.80),  # *冠
    (2.15, 3.80, 2.70),  # 易*博
    (2.20, 4.00, 2.75),  # 伟*
    (2.30, 3.90, 2.70),  # B**n
    (2.26, 4.04, 2.78),  # Pi****le平*
    (2.22, 3.90, 2.85),  # 10**t
    (2.25, 3.80, 2.80),  # C***l
    (2.23, 3.66, 2.63),  # 利*
    (2.25, 3.90, 2.80),  # U****t (优*客)
    (2.25, 3.80, 2.85),  # S***t**g**t (博*堂)
    (2.23, 3.80, 2.71),  # IBC**t (沙*)
    (2.17, 3.85, 2.79),  # M****on88 (明*)
    (2.06, 3.70, 2.68),  # 香**会
    (2.23, 3.80, 2.71),  # 12**t (壹*博)
    (2.30, 3.75, 2.70),  # 88******
    (2.23, 3.90, 2.80),  # 大巨*
    (2.30, 3.75, 2.90),  # 必*
    (2.25, 3.80, 2.75),  # 18**t
    (2.36, 4.16, 2.85),  # 1x**t
    (2.32, 4.05, 2.78),  # **ts**n
    (2.25, 3.75, 2.65),  # I***rt*ps
    (2.25, 3.95, 2.75),  # **t-at-H**e
    (2.25, 4.00, 2.75),  # **tf**g
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.15, 3.90, 2.45),  # 竞*官*
    (2.30, 3.75, 2.75),  # 威**尔
    (2.24, 3.80, 2.48),  # *门
    (2.30, 3.90, 2.70),  # 立*
    (2.30, 3.80, 2.75),  # **t3*5
    (2.40, 3.70, 2.75),  # I***rw**t*n
    (2.30, 3.75, 2.80),  # S**I
    (2.36, 4.00, 2.68),  # *冠
    (2.35, 3.60, 2.50),  # 易*博
    (2.30, 4.00, 2.70),  # 伟*
    (2.30, 3.90, 2.75),  # B**n
    (2.36, 3.93, 2.81),  # Pi****le平*
    (2.36, 3.95, 2.75),  # 10**t
    (2.30, 3.90, 2.75),  # C***l
    (2.35, 3.62, 2.50),  # 利*
    (2.30, 3.90, 2.75),  # U****t (优*客)
    (2.30, 3.90, 2.75),  # S***t**g**t (博*堂)
    (2.40, 3.80, 2.49),  # IBC**t (沙*)
    (2.40, 3.80, 2.49),  # M****on88 (明*)
    (2.06, 3.70, 2.68),  # 香**会
    (2.40, 3.80, 2.49),  # 12**t (壹*博)
    (2.25, 3.75, 2.80),  # 88******
    (2.34, 3.95, 2.75),  # 大巨*
    (2.42, 4.10, 2.90),  # 必*
    (2.30, 3.90, 2.70),  # 18**t
    (2.39, 4.03, 2.86),  # 1x**t
    (2.32, 3.85, 2.90),  # **ts**n
    (2.25, 3.65, 2.70),  # I***rt*ps
    (2.40, 3.90, 2.75),  # **t-at-H**e
    (2.30, 3.75, 2.80),  # **tf**g
]
```

---

## 四、竞彩官方赔率

```python
# 竞彩官方赔率
jc_odds = {
    '胜': 4.16,
    '平': 4.35,
    '负': 1.52
}
```

---

## 五、快速复制数据块

```python
# ===== 竞彩赔率 =====
JC_WIN = 4.16
JC_DRAW = 4.35
JC_AWAY = 1.52

# ===== 初盘赔率（澳门，第3家）=====
MAC_INIT = (2.24, 3.80, 2.48)

# ===== 即时赔率（澳门，第3家）=====
MAC_REAL = (2.24, 3.80, 2.48)

# ===== 变动 =====
MAC_CHG = (
    round(float(MAC_REAL[0]) - float(MAC_INIT[0]), 2),
    round(float(MAC_REAL[1]) - float(MAC_INIT[1]), 2),
    round(float(MAC_REAL[2]) - float(MAC_INIT[2]), 2)
)

# ===== 澳门推荐 =====
MACAO_TIP = ""
```
