分析模板/2026.04.28/周二004_巴黎圣曼vs拜仁_源数据.md
# 赔率分析源数据

> 数据来源：500.com 竞彩足球 | 编号：周二004 | 采集日期：2026-04-29

---

## 一、比赛基本信息

| 字段 | 内容 |
|------|------|
| 主队 | 巴黎圣曼 |
| 客队 | 拜仁 |
| 比赛时间 | 2026-04-29 03:00 |
| 赛事 | 欧冠 |
| 让球 | -1 |
| 主队近况 | 近10场，8胜0平2负 进27球 失8球 胜率80% 赢盘率80% 大球率80% |
| 客队近况 | 近10场，9胜1平0负 进33球 失13球 胜率90% 赢盘率70% 大球率80% |
| 主队近况走势 | WWLWWW |
| 主队盘路走势 | WWLWWW |
| 客队近况走势 | WWWWWW |
| 客队盘路走势 | WWWLWW |
| 历史交锋 | 巴黎圣日耳曼 1胜0和5负 |
| 澳门推荐 | 和局 |
| 澳门分析 | 巴黎圣日门在去年世冠盃曾2比0击败拜仁慕尼黑，但在今届欧冠联联赛阶段前者曾以1比2输给后者，彼此间都拥有堪称当今全欧最顶尖实力的攻击线，实力不相伯仲，这场强强对话大家都可以接受激战成和。 |

---

## 二、初盘赔率（共30家公司）

```python
initial_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.08, 3.70, 2.65),  # 竞*官*
    (2.25, 3.80, 2.75),  # 威**尔
    (2.24, 3.80, 2.48),  # *门
    (2.30, 3.90, 2.70),  # 立*
    (2.20, 3.75, 3.00),  # **t3*5
    (2.35, 3.85, 2.75),  # I***rw**t*n
    (2.25, 3.90, 2.80),  # S**I
    (2.30, 4.05, 2.80),  # *冠
    (2.15, 3.80, 2.70),  # 易*博
    (2.20, 4.00, 2.75),  # 伟*
    (2.30, 3.90, 2.70),  # B**n
    (2.26, 4.04, 2.78),  # Pi****le平*
    (2.22, 3.90, 2.85),  # 10**t
    (2.25, 3.80, 2.80),  # C***l
    (2.23, 3.66, 2.63),  # 利*
    (2.25, 3.90, 2.80),  # U****t (优*客)
    (2.25, 3.80, 2.85),  # S***t**g**t (博*堂)
    (2.23, 3.80, 2.71),  # IBC**t (沙*)
    (2.17, 3.85, 2.79),  # M****on88 (明*)
    (2.06, 3.70, 2.68),  # 香**会
    (2.23, 3.80, 2.71),  # 12**t (壹*博)
    (2.30, 3.75, 2.70),  # 88******
    (2.23, 3.90, 2.80),  # 大巨*
    (2.30, 3.75, 2.90),  # 必*
    (2.25, 3.80, 2.75),  # 18**t
    (2.36, 4.16, 2.85),  # 1x**t
    (2.32, 4.05, 2.78),  # **ts**n
    (2.25, 3.75, 2.65),  # I***rt*ps
    (2.25, 3.95, 2.75),  # **t-at-H**e
    (2.25, 4.00, 2.75),  # **tf**g
]
```

---

## 三、即时赔率（共30家公司）

```python
realtime_odds = [
    # 格式: (主胜, 平局, 客胜)  # 公司名
    (2.29, 3.90, 2.29),  # 竞*官*
    (2.40, 3.70, 2.60),  # 威**尔
    (2.30, 3.80, 2.40),  # *门
    (2.40, 3.75, 2.62),  # 立*
    (2.45, 3.80, 2.63),  # **t3*5
    (2.60, 3.30, 2.75),  # I***rw**t*n
    (2.45, 3.75, 2.60),  # S**I
    (2.48, 3.90, 2.60),  # *冠
    (2.50, 3.80, 2.60),  # 易*博
    (2.45, 3.90, 2.55),  # 伟*
    (2.40, 3.80, 2.60),  # B**n
    (2.53, 3.95, 2.64),  # Pi****le平*
    (2.49, 3.95, 2.60),  # 10**t
    (2.40, 3.80, 2.62),  # C***l
    (2.51, 3.81, 2.56),  # 利*
    (2.45, 3.90, 2.60),  # U****t (优*客)
    (2.40, 3.80, 2.60),  # S***t**g**t (博*堂)
    (2.51, 3.80, 2.57),  # IBC**t (沙*)
    (2.51, 3.80, 2.58),  # M****on88 (明*)
    (2.36, 3.65, 2.33),  # 香**会
    (2.51, 3.80, 2.57),  # 12**t (壹*博)
    (2.40, 3.70, 2.60),  # 88******
    (2.49, 3.90, 2.65),  # 大巨*
    (2.56, 4.00, 2.70),  # 必*
    (2.45, 3.90, 2.55),  # 18**t
    (2.58, 3.91, 2.69),  # 1x**t
    (2.55, 3.90, 2.58),  # **ts**n
    (2.45, 3.85, 2.60),  # I***rt*ps
    (2.60, 3.85, 2.55),  # **t-at-H**e
    (2.45, 3.85, 2.60),  # **tf**g
]
```

---

## 四、竞彩官方赔率

```python
# 竞彩官方赔率
jc_odds = {
    '胜': 4.50,
    '平': 4.50,
    '负': 1.46
}
```

---

## 五、快速复制数据块

```python
# ===== 竞彩赔率 =====
JC_WIN = 4.50
JC_DRAW = 4.50
JC_AWAY = 1.46

# ===== 初盘赔率（澳门，第3家）=====
MAC_INIT = (2.24, 3.80, 2.48)

# ===== 即时赔率（澳门，第3家）=====
MAC_REAL = (2.30, 3.80, 2.40)

# ===== 变动 =====
MAC_CHG = (
    round(float(MAC_REAL[0]) - float(MAC_INIT[0]), 2),
    round(float(MAC_REAL[1]) - float(MAC_INIT[1]), 2),
    round(float(MAC_REAL[2]) - float(MAC_INIT[2]), 2)
)

# ===== 澳门推荐 =====
MACAO_TIP = "和局"
```
